raw-manifests/02_RetailStore_Microservices/05_ui/01_ingress_http_ip_mode.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-http-ip-mode
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: retail-store-http-ip-mode
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:358592703668:certificate/76d64c6d-ca45-4b24-b1f6-7486089afd2a
    alb.ingress.kubernetes.io/ssl-redirect: "443"

    # Health Check
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"

spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: ui
      port:
        number: 80
